Test/git-issues/git-issue-889b.dfy.expect
git-issue-889b.dfy(23,9): Error: unary minus (-3, type bv8) not allowed in case pattern
git-issue-889b.dfy(24,9): Error: unary minus (-0, type bv8) not allowed in case pattern
git-issue-889b.dfy(30,11): Error: unary minus (-3, type bv8) not allowed in case pattern
git-issue-889b.dfy(31,11): Error: unary minus (-0, type bv8) not allowed in case pattern
git-issue-889b.dfy(39,9): Error: unary minus (-0, type bv0) not allowed in case pattern
git-issue-889b.dfy(46,10): Error: type of unary - must be of a numeric or bitvector type (instead got ORDINAL)
git-issue-889b.dfy(54,9): Error: unary minus (-2, type ORDINAL) not allowed in case pattern
git-issue-889b.dfy(55,9): Error: unary minus (-0, type ORDINAL) not allowed in case pattern
8 resolution/type errors detected in git-issue-889b.dfy
